feat:Refactor the service class and other to use Swagger generated models