@@ -1,94 +1,75 @@
 package com.bookorder.discountcalculator.service;
 
-import org.assertj.core.util.Arrays;
-import org.junit.jupiter.api.BeforeEach;
+import com.bookorder.discountcalculator.model.BillDetails;
+import com.bookorder.discountcalculator.model.BookItem;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
 import java.util.List;
 
+import static com.bookorder.discountcalculator.model.BookItem.BookEnum.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.Mockito.when;
 
+@ExtendWith(MockitoExtension.class)
 class PriceCalculatorServiceTest {
 
-    private PriceCalculatorService priceCalculatorService;
+    @Mock
+    private PricingStrategy pricingStrategy;
 
-    @BeforeEach
-    public void setup() {
-        priceCalculatorService = new PriceCalculatorService(new OptimalDiscountPricingStrategy());
-    }
+    @InjectMocks
+    private PriceCalculatorService priceCalculatorService;
 
     @Test
     @DisplayName("Should return 0.0 for all prices when the basket is empty")
     void testCalculatePrice_EmptyBasket() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(0, 0, 0, 0, 0));
-        assertEquals(0.0, receipt, 0.001);
+        when(pricingStrategy.calculateMinimumPrice(anyList())).thenReturn(0.0);
+        BillDetails receipt = priceCalculatorService.calculatePrice(Collections.emptyList());
+        assertEquals(0.0, receipt.getOriginalPrice(), 0.001);
+        assertEquals(0.0, receipt.getFinalPrice(), 0.001);
+        assertEquals(0.0, receipt.getDiscount(), 0.001);
     }
 
     @Test
     @DisplayName("Should return standard price with zero discount for a single item")
     void testCalculatePrice_SingleItem() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(1, 0, 0, 0, 0));
-        assertEquals(50.0, receipt, 0.001);
+        BookItem book1 = new BookItem();
+        book1.setBook(CLEAN_CODE);
+        book1.setQuantity(1);
+        List<BookItem> items = List.of(book1);
+        when(pricingStrategy.calculateMinimumPrice(anyList())).thenReturn(50.0);
+        BillDetails receipt = priceCalculatorService.calculatePrice(items);
+        assertEquals(50.0, receipt.getOriginalPrice(), 0.001);
+        assertEquals(50.0, receipt.getFinalPrice(), 0.001);
+        assertEquals(0.0, receipt.getDiscount(), 0.001);
     }
 
     @Test
-    @DisplayName("Should return full price (100.0) for two copies of the same book with no discount")
-    void testTwoSameBooks_NoDiscount() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(2, 0, 0, 0, 0));
-        assertEquals(100.0, receipt, 0.001);
-    }
+    @DisplayName("Should aggregate original prices and calculate discount based on the strategy's final price")
+    void testCalculatePrice_MultipleItemsWithGrouping() {
+        BookItem book1 = new BookItem();
+        book1.setBook(CLEAN_CODE);
+        book1.setQuantity(2);
 
-    @Test
-    @DisplayName("Should return final price (95.0) for two copies of distinct book with 5% discount")
-    void testTwoDistinctBooks_5PresentDiscount() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(1, 1, 0, 0, 0));
-        assertEquals(95.0, receipt, 0.001);
-    }
+        BookItem book2 = new BookItem();
+        book2.setBook(THE_CLEAN_CODER);
+        book2.setQuantity(1);
 
-    @Test
-    @DisplayName("Should return final price (135.0) for three copies of distinct book with 10% discount")
-    void testThreeDistinctBooks_10PresentDiscount() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(1, 1, 1, 0, 0));
-        assertEquals(135.0, receipt, 0.001);
-    }
+        BookItem book3 = new BookItem();
+        book3.setBook(CLEAN_ARCHITECTURE);
+        book3.setQuantity(1);
 
-    @Test
-    @DisplayName("Should return final price (160.0) for four copies of distinct book with 20% discount")
-    void testFourDistinctBooks_20PresentDiscount() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(1, 1, 1, 1, 0));
-        assertEquals(160.0, receipt, 0.001);
+        List<BookItem> items = List.of(book1,book2,book3);
+        when(pricingStrategy.calculateMinimumPrice(anyList())).thenReturn(180.0);
+        BillDetails receipt = priceCalculatorService.calculatePrice(items);
+        assertEquals(200.0, receipt.getOriginalPrice(), 0.001);
+        assertEquals(180.0, receipt.getFinalPrice(), 0.001);
+        assertEquals(20.0, receipt.getDiscount(), 0.001);
     }
-
-    @Test
-    @DisplayName("Should return final price (187.5) for five copies of distinct book with 25% discount")
-    void testFiveDistinctBooks_25PresentDiscount() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(1, 1, 1, 1, 1));
-        assertEquals(187.5, receipt, 0.001);
-    }
-
-    @Test
-    @DisplayName("Should calculate the correct price for a mix of grouped and ungrouped identical books")
-    void testMixedBooks_SimpleGrouping() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(2, 1, 0, 0, 0));
-        assertEquals(145.0, receipt, 0.001);
-    }
-
-    @Test
-    @DisplayName("Edge Case: Should prefer two groups of four (320.0) over a group of five and three (322.5)")
-    void testComplexEdgeCase_FourPlusFourIsCheaperThanFivePlusThree() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(2, 2, 2, 1, 1));
-        assertEquals(320.0, receipt, 0.001);
-    }
-
-    @Test
-    @DisplayName("Performance: Should quickly calculate the minimum price for a large basket without timing out")
-    void testLargeBasket() {
-        double receipt = priceCalculatorService.calculatePrice(List.of(5, 5, 5, 5, 5));
-        assertEquals(937.5, receipt, 0.001);
-    }
-
 }
